--- a/Frontend/Admin/editEmp.html
+++ b/Frontend/Admin/editEmp.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Formulario de Edición de Empleado</title>
     <script src="https://cdn.jsdelivr.net/npm/vue@2"></script>
+    <link rel="stylesheet" href="styles-edit-emp.css">
+
   </head>
   <body>
     <div id="app">
