--- a/Frontend/Admin/viewEmp.html
+++ b/Frontend/Admin/viewEmp.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles-super-admin.css">
     <script src="https://cdn.jsdelivr.net/npm/vue@2"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <title></title>
 
 </head>
@@ -92,6 +93,13 @@
             <div class="toolbar">
             </div>
           <h2 class="section--title">Lista de Empleados</h2>
+            <label>
+                <select name="date"  class="dropdown doctor--filter" @change="filtrarEmpleados">
+                    <option value="all">Todos</option>
+                    <option value="free">Activos</option>
+                    <option value="busy">Inactivos</option>
+                </select>
+            </label>
           <table class="employees-table">
             <thead>
               <tr>
@@ -112,13 +120,10 @@
                 <td>{{ empleado.NOMBRE_EMPLEO }}</td>
                 <td>{{ empleado.ID_USUARIO }}</td>
                 <td>
- 
-                 <button @click="obtenerEmpleadoEspecifico(empleado.ID_USUARIO)">
-                    Editar
-                 </button>                    
-                 <button @click="DeshabilitarEmpleado(empleado.ID_USUARIO)">
-                    Deshabilitar
-                </button>
+                    <button @click="obtenerEmpleadoEspecifico(empleado.ID_USUARIO)"
+                            class="btn-icon"><i class="fas fa-edit"></i></button>
+                    <button @click="DeshabilitarEmpleado(empleado.ID_USUARIO)"
+                            class="btn-icon btn-icon-disable"><i class="fas fa-times"></i></button>
 
                  </td>
               </tr>
