--- a/Frontend/Manager_area/manager.html
+++ b/Frontend/Manager_area/manager.html
@@ -120,7 +120,7 @@
                         <div class="card--data">
                             <div class="card--content">
                                 <h5 class="card--title">Total Empleados</h5>
-                                <h1>4</h1>
+                                <h1>{{empleados.length}}</h1>
                             </div>
                             <i class="ri-user-2-line card--icon--lg"></i>
                         </div>
@@ -128,20 +128,6 @@
                             <span><i class="ri-bar-chart-fill card--icon stat--icon"></i>50%</span>
                             <span><i class="ri-arrow-up-s-fill card--icon up--arrow"></i>2</span>
                             <span><i class="ri-arrow-down-s-fill card--icon down--arrow"></i>2</span>
-                        </div>
-                    </div>
-                    <div class="card card-2">
-                        <div class="card--data">
-                            <div class="card--content">
-                                <h5 class="card--title">Total Tareas</h5>
-                                <h1>65</h1>
-                            </div>
-                            <i class="ri-user-line card--icon--lg"></i>
-                        </div>
-                        <div class="card--stats">
-                            <span><i class="ri-bar-chart-fill card--icon stat--icon"></i>60%</span>
-                            <span><i class="ri-arrow-up-s-fill card--icon up--arrow"></i>40</span>
-                            <span><i class="ri-arrow-down-s-fill card--icon down--arrow"></i>25</span>
                         </div>
                     </div>
 
@@ -172,6 +158,9 @@
                         <td>{{ empleado.HORARIO }}</td>
                         <td>
                             <button @click="mostrarFormularioTarea(empleado.ID_EMPLEADO)"
+                                    class="btn-icon"><i class="fas fa-tasks"></i></button>
+            
+                            <button @click="verTareas(empleado.ID_EMPLEADO)"
                                     class="btn-icon"><i class="fas fa-tasks"></i></button>
                         </td>
                     </tr>
@@ -226,6 +215,32 @@
                         <button type="submit" class="btn-icon">
                             <i class="fas fa-check"></i></button>
                     </form>
+                </div>
+                <div v-if="verTareasU.length > 0">
+                    <h3>Tareas del empleado</h3>
+                    <table>
+                        <thead>
+                            <tr>
+                                <th>Descripción</th>
+                                <th>Estado</th>
+                                <th>Fecha de Vencimiento</th>
+                                <th>Habitación</th>
+                                <th>Prioridad</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr v-for="tarea in verTareasU" :key="tarea.ID_TAREA">
+                                <td>{{ tarea.DESCRIPCION }}</td>
+                                <td>{{ tarea.ESTADO }}</td>
+                                <td>{{ tarea.FECHA_VENCIMIENTO }}</td>
+                                <td>{{ tarea.ID_HABITACION }}</td>
+                                <td>{{ tarea.PRIORIDAD }}</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+                <div v-else>
+                    <p>No hay tareas disponibles para este empleado.</p>
                 </div>
             </div>
         </div>
