--- a/Frontend/Manager_area/manager.html
+++ b/Frontend/Manager_area/manager.html
@@ -80,15 +80,15 @@
         <div class="sidebar">
             <ul class="sidebar--items">
                 <li>
-                    <a href="#" id="active--link">
+                    <a href="manager.html" id="active--link">
                         <span class="icon icon-1"><i class="ri-layout-grid-line"></i></span>
-                        <span class="sidebar--item">Control</span>
+                        <span class="sidebar--item">Empleados</span>
                     </a>
                 </li>
                 <li>
-                    <a href="#">
+                    <a href="viewTasks.html">
                         <span class="icon icon-2"><i class="ri-calendar-2-line"></i></span>
-                        <span class="sidebar--item">Horario</span>
+                        <span class="sidebar--item">Tareas</span>
                     </a>
                 </li>
 
@@ -159,9 +159,12 @@
                         <td>
                             <button @click="mostrarFormularioTarea(empleado.ID_EMPLEADO)"
                                     class="btn-icon"><i class="fas fa-tasks"></i></button>
-            
-                            <button @click="verTareas(empleado.ID_EMPLEADO)"
-                                    class="btn-icon"><i class="fas fa-tasks"></i></button>
+                            <a href="viewTasks.html">
+                                <button @click="verTareas(empleado.ID_EMPLEADO)"
+                                        class="btn-icon"><i class="fas fa-eye "></i>
+                                </button>
+                            </a>
+
                         </td>
                     </tr>
                     </tbody>
@@ -216,35 +219,8 @@
                             <i class="fas fa-check"></i></button>
                     </form>
                 </div>
-                <div v-if="verTareasU.length > 0">
-                    <h3>Tareas del empleado</h3>
-                    <table>
-                        <thead>
-                            <tr>
-                                <th>Descripción</th>
-                                <th>Estado</th>
-                                <th>Fecha de Vencimiento</th>
-                                <th>Habitación</th>
-                                <th>Prioridad</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr v-for="tarea in verTareasU" :key="tarea.ID_TAREA">
-                                <td>{{ tarea.DESCRIPCION }}</td>
-                                <td>{{ tarea.ESTADO }}</td>
-                                <td>{{ tarea.FECHA_VENCIMIENTO }}</td>
-                                <td>{{ tarea.ID_HABITACION }}</td>
-                                <td>{{ tarea.PRIORIDAD }}</td>
-                            </tr>
-                        </tbody>
-                    </table>
-                </div>
-                <div v-else>
-                    <p>No hay tareas disponibles para este empleado.</p>
-                </div>
             </div>
         </div>
-</div>
 </section>
 </div>
 <script src="managerG.js"></script>
