--- a/Frontend/Manager_area/manager.html
+++ b/Frontend/Manager_area/manager.html
@@ -159,7 +159,7 @@
                         <td>
                             <button @click="mostrarFormularioTarea(empleado.ID_EMPLEADO)"
                                     class="btn-icon"><i class="fas fa-tasks"></i></button>
-                            <a href="viewTasks.html">
+                            <a>
                                 <button @click="verTareas(empleado.ID_EMPLEADO)"
                                         class="btn-icon"><i class="fas fa-eye "></i>
                                 </button>
@@ -216,7 +216,8 @@
                         </div>
 
                         <button type="submit" class="btn-icon">
-                            <i class="fas fa-check"></i></button>
+                            <i class="fas fa-check"></i>
+                        </button>
                     </form>
                 </div>
             </div>
