--- a/Frontend/Manager_area/viewTasks.html
+++ b/Frontend/Manager_area/viewTasks.html
@@ -16,18 +16,11 @@
             <h2>Hosp<span>Ital</span></h2>
         </div>
         <div class="search--notification--profile">
-            <div class="search">
-                <input type="text" placeholder="Buscar..">
-                <button><i class=""></i></button>
-            </div>
-            <div class="notification--profile">
+            <button class="button--notification--profile">
                 <div class="picon lock">
-                    <img src="../img/notification.png"></img>
+                    <i class="fa fa-bell"></i>
                 </div>
-                <div class="picon profile">
-                    <img src="../img/profile.png">
-                </div>
-            </div>
+            </button>
         </div>
     </section>
     <section class="main">
