--- a/Frontend/user/user.html
+++ b/Frontend/user/user.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles-user.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <script src="https://cdn.jsdelivr.net/npm/vue@2"></script>
     <title></title>
 
@@ -47,19 +48,11 @@
         <h2>Hosp<span>Ital</span></h2>
     </div>
     <div class="search--notification--profile">
-        <div class="search">
-            <input type="text" placeholder="Search..">
-            <button><i class=""></i></button>
-        </div>
-        <div class="notification--profile">
-            <div class="picon lock">
-                <img src="../img/notification.png" ></img>
+        <button class="button--notification--profile">
+            <div class="picon lock" title="Notificaciones">
+                <i class="fa fa-bell"></i>
             </div>
-
-            <div class="picon profile">
-                <img src="../img/doctor.png"  alt="">
-            </div>
-        </div>
+        </button>
     </div>
 </section>
 <section class="main">
