Ajuste de Ubicación user

--- a/Frontend/Manager_area/manager.html
+++ b/Frontend/Manager_area/manager.html
@@ -60,6 +60,9 @@
             <i class="ri-menu-line icon icon-0 menu"></i>
             <h2>Hosp<span>Ital</span></h2>
         </div>
+        <div class="header-user">
+            <p class="user">{{ idGerente }}: {{}}</p>
+        </div>
         <div class="search--notification--profile">
             <button class="button--notification--profile">
                 <div class="picon lock" title="Notificaciones">
@@ -98,7 +101,6 @@
             <div class="overview">
                 <div class="title">
                     <h2 class="section--title">Avances</h2>
-                    <p class="user">{{ idGerente }}</p>
                     <select name="date" id="date" class="dropdown">
                         <option value="today">Hoy</option>
                         <option value="lastweek">La semana pasada</option>
