SE AGREGA FUNCIONALIDAD AL EMPLEADO PARA VISUALIZAR LAS TAREAS QUE TIENE PENDIENTE ASI COMO LE PERMITE ACTUALIZAR SU ESTADO, DE ESTA MANERA PODER MARCARLA COMO COMPLETADA , EN PROGRESO O ASIGNADA

--- a/Frontend/Manager_area/manager.html
+++ b/Frontend/Manager_area/manager.html
@@ -61,7 +61,7 @@
             <h2>Hosp<span>Ital</span></h2>
         </div>
         <div class="header-user">
-            <p class="user">{{ idGerente }}: {{}}</p>
+            <p class="user">{{ idGerente }}</p>
         </div>
         <div class="search--notification--profile">
             <button class="button--notification--profile">
